making code readable + fixed flickering UI issue with share icon

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,27 +1,25 @@
+// fc is defined in variables.scss
+
 .container {
+  @include fc;
   min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 40px;
   overflow: hidden;
+  padding: 40px;
 }
 
 .card {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include fc;
   width: 860px;
 
   .nike {
-    position: absolute;
-    top: 85px;
-    left: 15px;
-    font-size: 11rem;
-    text-transform: uppercase;
-    line-height: 0.9;
     color: white;
+    font-size: 11rem;
+    left: 15px;
+    line-height: 0.9;
     opacity: 0.1;
+    position: absolute;
+    text-transform: uppercase;
+    top: 85px;
   }
 }
 
@@ -29,8 +27,7 @@
   position: relative;
   width: 50%;
   height: 475px;
-  box-shadow: -15px 0 35px rgba(0, 0, 0, 0.1), 0 -15px 35px rgba(0, 0, 0, 0.1),
-    0 15px 35px rgba(0, 0, 0, 0.1);
+  box-shadow: $box-shadow2;
   transition: 0.5s;
 }
 
@@ -51,6 +48,12 @@
   z-index: -2;
 }
 
+@each $color, $gradient in $gradientBgs {
+  .gradient[color="#{$color}"] {
+    background-image: $gradient;
+  }
+}
+
 .behind {
   z-index: -1 !important;
 }
@@ -67,12 +70,6 @@
   }
 }
 
-@each $color, $gradient in $gradientBgs {
-  .gradient[color="#{$color}"] {
-    background-image: $gradient;
-  }
-}
-
 .logo {
   position: absolute;
   width: 100px;
@@ -81,44 +78,41 @@
 }
 
 .share {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top: 15px;
-  right: 15px;
-  background-color: #fff;
-  width: 50px;
-  height: 50px;
+  @include fc;
+  background: #fff;
   border-radius: 50%;
-  font-size: 1.3rem;
-  text-decoration: none;
   color: var(--primary);
+  font-size: 1.3rem;
+  height: 50px;
+  position: absolute;
+  right: 15px;
+  text-decoration: none;
+  top: 15px;
   transition: 0.5s;
+  width: 50px;
+  z-index: 10;
   &:hover {
     transform: scale(1.1);
   }
 }
 .shoe {
-  position: absolute;
-  width: 140%;
   bottom: 0;
+  opacity: 0;
+  position: absolute;
   right: 0;
   transform: rotate(-20deg);
-  opacity: 0;
-
+  width: 140%;
   &.show {
     opacity: 1;
   }
 }
 
 .info {
-  width: 50%;
   background: #fff;
-  z-index: 1;
+  box-shadow: $box-shadow1;
+  width: 50%;
   padding: 35px 40px;
-  box-shadow: 15px 0 35px rgba(0, 0, 0, 0.1), 0 -15px 35px rgba(0, 0, 0, 0.1),
-    0 15px 35px rgba(0, 0, 0, 0.1);
+  z-index: 1;
 
   .shoeName,
   .description,
@@ -126,12 +120,12 @@
   .size-container {
     border-bottom: 1px solid #dadada;
   }
+
   .shoeName {
     padding: 0 0 10px 0;
 
     div {
-      display: flex;
-      align-items: center;
+      @include fc(1, 0);
       .big {
         margin-right: 10px;
         font-size: 2rem;
@@ -215,24 +209,21 @@
 
   .color.active {
     border-color: #fff;
-    box-shadow: 0 0 10px 0.5px rgba(0, 0, 0, 0.2);
+    box-shadow: $box-shadow3;
     transform: scale(1.1);
   }
   .size-container {
     padding: 10px 0;
     margin-bottom: 10px;
     .sizes {
-      display: flex;
-      align-items: center;
+      @include fc(1, 0);
       padding: 8px 0;
       .size {
+        @include fc;
         cursor: pointer;
         background: #eee;
         width: 40px;
         height: 40px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
         border-radius: 6px;
         margin: 0 10px;
         font-weight: 500;
@@ -246,10 +237,9 @@
     }
   }
   .buy-price {
-    display: flex;
+    @include fc(1, 0);
     padding: 15px 0;
     justify-content: space-between;
-    align-items: center;
     .buy {
       padding: 0.7rem 1rem;
       background: var(--primary);
